--- a/Part5/blogFrontend/package.json
+++ b/Part5/blogFrontend/package.json
@@ -11,6 +11,10 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.8",
+    "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.10.1",
     "@tanstack/react-query": "^5.90.8",
     "axios": "^1.9.0",
